Created history page functionality.

--- a/History.html
+++ b/History.html
@@ -18,62 +18,76 @@
         <section>
             <h3>Meals The Past Week Were:</h3>
             <p id="showIfEmpty">There are currently no meals recorded, please record a meal.</p>
-            <input type="date" id="date"> <input type="text" id="mealName"> <button id="planMeal">I Ate This</button>
+            <!-- <input type="date" id="date"> <input type="text" id="mealName"> <button id="planMeal">I Ate This</button> -->
             <!--Newest Date-->
-            <p id="oldDate1"></p>
-            <div id="oldDate1MealName">
+            <div class="mealCard">
+            <p class="mealDate" id="oldDate0"></p>
+            <div class="mealName" id="oldDate0MealName">
 
             </div>
-            <div id="oldDate1MealImage">
+            <div class="mealImg" id="oldDate0MealImage">
 
+            </div>
             </div>
             <!--Second Date-->
-            <p id="oldDate2"></p>
-            <div id="oldDate2MealName">
+            <div class="mealCard">
+            <p class="mealDate" id="oldDate1"></p>
+            <div class="mealName" id="oldDate1MealName">
 
             </div>
-            <div id="oldDate2MealImage">
+            <div class="mealImg" id="oldDate1MealImage">
 
+            </div>
             </div>
             <!--Third Date-->
-            <p id="oldDate3"></p>
-            <div id="oldDate3MealName">
+            <div class="mealCard">
+            <p class="mealDate" id="oldDate2"></p>
+            <div class="mealName" id="oldDate2MealName">
 
             </div>
-            <div id="oldDate3MealImage">
+            <div class="mealImg" id="oldDate2MealImage">
 
+            </div>
             </div>
             <!--4th Date-->
-            <p id="oldDate4"></p>
-            <div id="oldDate4MealName">
+            <div class="mealCard">
+            <p class="mealDate" id="oldDate3"></p>
+            <div class="mealName" id="oldDate3MealName">
 
             </div>
-            <div id="oldDate4MealImage">
+            <div class="mealImg" id="oldDate3MealImage">
 
+            </div>
             </div>
             <!--5th Date-->
-            <p id="oldDate5"></p>
-            <div id="oldDate5MealName">
+            <div class="mealCard">
+            <p class="mealDate" id="oldDate4"></p>
+            <div class="mealName" id="oldDate4MealName">
 
             </div>
-            <div id="oldDate5MealImage">
+            <div class="mealImg" id="oldDate4MealImage">
 
+            </div>
             </div>
             <!--6th Date-->
-            <p id="oldDate6"></p>
-            <div id="oldDate6MealName">
+            <div class="mealCard">
+            <p class="mealDate" id="oldDate5"></p>
+            <div class="mealName" id="oldDate5MealName">
 
             </div>
-            <div id="oldDate6MealImage">
+            <div class="mealImg" id="oldDate5MealImage">
 
+            </div>
             </div>
             <!--7th Date-->
-            <p id="oldDate7"></p>
-            <div id="oldDate7MealName">
+            <div class="mealCard">
+            <p class="mealDate" id="oldDate6"></p>
+            <div class="mealName" id="oldDate6MealName">
 
             </div>
-            <div id="oldDate7MealImage">
+            <div class="mealImg" id="oldDate6MealImage">
 
+            </div>
             </div>
         </section>
         <nav>
