--- a/MealRec.html
+++ b/MealRec.html
@@ -27,8 +27,8 @@
 
     <div class="meal-card">
         <img src="images/tuna sandwich.jpeg" alt="Tuna Sandwich">
-        <h3>Tuna Salad Sandwich on Whole Wheat Bread </h3>
-        <p>Calories: 253 Kcal | Protein: 27g | Fat:20g </p>
+        <h3 id="mealName">Tuna Salad Sandwich on Whole Wheat Bread </h3>
+        <span>Calories:</span> <span id="calories">253</span><span>kcal | Protein: </span><span id="protein">27</span><span>g | Fat: </span><span id="fat">20</span><span>g</span>
         <p>Why this meal? High Calorie Lunch</p>
         <input type="date" id="date"> <button id="planMeal">I Want To Eat This Meal</button>
         <br>
