--- a/History.html
+++ b/History.html
@@ -8,6 +8,93 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <main>
+        <section>
+            <h2>Your Meal History</h2>
+            <p>
+                Welcome to your meal history page. Here you can see your previous week of meals.
+            </p>
+        </section>
+        <section>
+            <h3>Meals The Past Week Were:</h3>
+            <p id="showIfEmpty">There are currently no meals recorded, please record a meal.</p>
+            <!-- <input type="date" id="date"> <input type="text" id="mealName"> <button id="planMeal">I Ate This</button> -->
+            <!--Newest Date-->
+            <div class="mealCard">
+            <p class="mealDate" id="oldDate0"></p>
+            <div class="mealName" id="oldDate0MealName">
+
+            </div>
+            <div class="mealImg" id="oldDate0MealImage">
+
+            </div>
+            </div>
+            <!--Second Date-->
+            <div class="mealCard">
+            <p class="mealDate" id="oldDate1"></p>
+            <div class="mealName" id="oldDate1MealName">
+
+            </div>
+            <div class="mealImg" id="oldDate1MealImage">
+
+            </div>
+            </div>
+            <!--Third Date-->
+            <div class="mealCard">
+            <p class="mealDate" id="oldDate2"></p>
+            <div class="mealName" id="oldDate2MealName">
+
+            </div>
+            <div class="mealImg" id="oldDate2MealImage">
+
+            </div>
+            </div>
+            <!--4th Date-->
+            <div class="mealCard">
+            <p class="mealDate" id="oldDate3"></p>
+            <div class="mealName" id="oldDate3MealName">
+
+            </div>
+            <div class="mealImg" id="oldDate3MealImage">
+
+            </div>
+            </div>
+            <!--5th Date-->
+            <div class="mealCard">
+            <p class="mealDate" id="oldDate4"></p>
+            <div class="mealName" id="oldDate4MealName">
+
+            </div>
+            <div class="mealImg" id="oldDate4MealImage">
+
+            </div>
+            </div>
+            <!--6th Date-->
+            <div class="mealCard">
+            <p class="mealDate" id="oldDate5"></p>
+            <div class="mealName" id="oldDate5MealName">
+
+            </div>
+            <div class="mealImg" id="oldDate5MealImage">
+
+            </div>
+            </div>
+            <!--7th Date-->
+            <div class="mealCard">
+            <p class="mealDate" id="oldDate6"></p>
+            <div class="mealName" id="oldDate6MealName">
+
+            </div>
+            <div class="mealImg" id="oldDate6MealImage">
+
+            </div>
+            </div>
+        </section>
+        <nav>
+            <ul>
+                <li><a href="index.html">Go Home</a></li>
+            </ul>
+        </nav>
+    </main>
 </body>
 </html>
