Added history link to bottom

--- a/MealRec.html
+++ b/MealRec.html
@@ -297,6 +297,7 @@
     <p>Want more meals tailored to your nutritional needs?</p>
     <a id="reg" href="RegPage.html">Create Your Profile</a>
     <a href="index.html">Go Home</a>
+    <a href="History.html">History</a>
 </section>
 
 </div>
