Updated MealRec and styles

--- a/MealRec.html
+++ b/MealRec.html
@@ -28,7 +28,10 @@
     <div class="meal-card">
         <img src="images/tuna sandwich.jpeg" alt="Tuna Sandwich">
         <h3>Tuna Salad Sandwich on Whole Wheat Bread </h3>
-        <p>Calories: 253 Kcal | Protein: 27g | Fat:20g </p>
+        <span>Calories:</span> <span id="calories">253</span><span>kcal | Protein: </span><span id="protein">27</span><span>g | Fat: </span><span id="fat">20</span><span>g</span>
+        <input type="date" id="date3"> <button id="planMeal2">I Want To Eat This Meal</button>
+        <br>    
+        <input type="date" id="date4"> <button id="ateMeal2">I Ate This Meal</button>
         <p>Why this meal? High Calorie Lunch</p>
     </div>
 </section>
@@ -51,12 +54,21 @@
                 <img src="images/AvocadoToastwithEgg.jpg" alt="Avocado Toast with Eggs">
                 <div class="meal-info">
                     <div class="meal-title">Avocado Toast with Eggs</div>
+                     <span>Calories:</span> <span id="calories">400</span><span>kcal | Protein: </span><span id="protein">20</span><span>g | Fat: </span><span id="fat">25</span><span>g</span>
+                     <input type="date" id="date5"> <button id="planMeal3">I Want To Eat This Meal</button>
+                     <br>
+                        <input type="date" id="date6"> <button id="ateMeal3">I Ate This Meal</button>
+                    
                 </div>
             </div>
             <div class="meal-card">
                 <img src="images/berry cottage cheese breakfast bowl.jpeg" alt="Berry Cottage Cheese Breakfast Bowl">
                 <div class="meal-info">
                     <div class="meal-title">Berry Cottage Cheese Breakfast Bowl</div>
+                    <span>Calories:</span> <span id="calories">300</span><span>kcal | Protein: </span><span id="protein">25</span><span>g | Fat: </span><span id="fat">12</span><span>g</span>
+                    <input type="date" id="date7"> <button id="planMeal4">I Want To Eat This Meal</button>
+                    <br>
+                    <input type="date" id="date8"> <button id="ateMeal4">I Ate This Meal</button>
                 </div>
             </div>
         </div>
@@ -71,12 +83,20 @@
                 <img src="images/grilled-chicken-salad-.jpg" alt="Grilled Chicken Salad">
                 <div class="meal-info">
                     <div class="meal-title">Grilled Chicken Salad</div>
+                    <span>Calories:</span> <span id="calories">350</span><span>kcal | Protein: </span><span id="protein">30</span><span>g | Fat: </span><span id="fat">25</span><span>g</span>
+                    <input type="date" id="date9"> <button id="planMeal5">I Want To Eat This Meal</button>
+                    <br>
+                    <input type="date" id="date10"> <button id="ateMeal5">I Ate This Meal</button>
                 </div>
             </div>
             <div class="meal-card">
                 <img src="images/Buffalo chicken rice bowls.jpeg" alt="Buffalo Chicken Rice Bowls">
                 <div class="meal-info">
                     <div class="meal-title">Buffalo Chicken Rice Bowls</div>
+                    <span>Calories:</span> <span id="calories">600</span><span>kcal | Protein: </span><span id="protein">45</span><span>g | Fat: </span><span id="fat">25</span><span>g</span>
+                    <input type="date" id="date11"> <button id="planMeal6">I Want To Eat This Meal</button>
+                    <br>        
+                    <input type="date" id="date12"> <button id="ateMeal6">I Ate This Meal</button>
                 </div>
             </div>
         </div>
@@ -91,12 +111,20 @@
                 <img src="images/salmon-caesar-small-1.jpg" alt="Salmon Caesar Salad">
                 <div class="meal-info">
                     <div class="meal-title">Salmon Caesar Salad</div>
+                    <span>Calories:</span> <span id="calories">450</span><span>kcal | Protein: </span><span id="protein">35</span><span>g | Fat: </span><span id="fat">25</span><span>g</span>
+                    <input type="date" id="date13"> <button id="planMeal7">I Want To Eat This Meal</button>
+                    <br>
+                    <input type="date" id="date14"> <button id="ateMeal7">I Ate This Meal</button>
                 </div>
             </div>
             <div class="meal-card">
                 <img src="images/crock pot chicken tacos.jpeg" alt="Crock Pot Chicken Tacos">
                 <div class="meal-info">
                     <div class="meal-title">Crock Pot Chicken Tacos</div>
+                    <span>Calories:</span> <span id="calories">350</span><span>kcal | Protein: </span><span id="protein">30</span><span>g | Fat: </span><span id="fat">15</span><span>g</span>
+                    <input type="date" id="date15"> <button id="planMeal8">I Want To Eat This Meal</button>
+                    <br>
+                    <input type="date" id="date16"> <button id="ateMeal8">I Ate This Meal</button>
                 </div>
             </div>
         </div>
@@ -116,12 +144,20 @@
                 <img src="images/scrambled eggs with spinach and toast.jpeg" alt="Scrambled Eggs with Spinach">
                 <div class="meal-info">
                     <div class="meal-title">Scrambled Eggs with Spinach and Toast</div>
+                    <span>Calories:</span> <span id="calories">350</span><span>kcal | Protein: </span><span id="protein">25</span><span>g | Fat: </span><span id="fat">20</span><span>g</span>
+                    <input type="date" id="date17"> <button id="planMeal9">I Want To Eat This Meal</button>
+                    <br>
+                    <input type="date" id="date18"> <button id="ateMeal9">I Ate This Meal</button>
                 </div>
             </div>
             <div class="meal-card">
                 <img src="images/overnight oats.jpeg" alt="Overnight Oats">
                 <div class="meal-info">
                     <div class="meal-title">Overnight Oats with Berries and Nuts</div>
+                    <span>Calories:</span> <span id="calories">300</span><span>kcal | Protein: </span><span id="protein">10</span><span>g | Fat: </span><span id="fat">15</span><span>g</span>
+                    <input type="date" id="date19"> <button id="planMeal10">I Want To Eat This Meal</button>
+                    <br>
+                    <input type="date" id="date20"> <button id="ateMeal10">I Ate This Meal</button>
                 </div>
             </div>
         </div>
@@ -136,12 +172,20 @@
                 <img src="images/lentil soup.jpeg" alt="Lentil Soup">
                 <div class="meal-info">
                     <div class="meal-title">Lentil Soup with Whole Grain Bread</div>
+                    <span>Calories:</span> <span id="calories">350</span><span>kcal | Protein: </span><span id="protein">20</span><span>g | Fat: </span><span id="fat">5</span><span>g</span>
+                    <input type="date" id="date21"> <button id="planMeal11">I Want To Eat This Meal</button>
+                    <br>
+                    <input type="date" id="date22"> <button id="ateMeal11">I Ate This Meal</button>
                 </div>
             </div>
             <div class="meal-card">
                 <img src="images/grilled with quinoa.jpeg" alt="Grilled Chicken Salad">
                 <div class="meal-info">
-                    <div class="meal-title">Grilled Chicken Salad</div>
+                    <div class="meal-title">Grilled Chicken & Quinoa Salad with Veggies</div>
+                    <span>Calories:</span> <span id="calories">400</span><span>kcal | Protein: </span><span id="protein">35</span><span>g | Fat: </span><span id="fat">18</span><span>g</span>
+                    <input type="date" id="date23"> <button id="planMeal12">I Want To Eat This Meal</button>
+                    <br>    
+                    <input type="date" id="date24"> <button id="ateMeal12">I Ate This Meal</button>
                 </div>
             </div>
         </div>
@@ -156,12 +200,20 @@
                 <img src="images/baked salmon with veg.webp" alt="Baked Salmon">
                 <div class="meal-info">
                     <div class="meal-title">Baked Salmon with Roasted Vegetables</div>
+                    <span>Calories:</span> <span id="calories">500</span><span>kcal | Protein: </span><span id="protein">45</span><span>g | Fat: </span><span id="fat">30</span><span>g</span>
+                    <input type="date" id="date25"> <button id="planMeal13">I Want To Eat This Meal</button>
+                    <br>
+                    <input type="date" id="date26"> <button id="ateMeal13">I Ate This Meal</button>
                 </div>
             </div>
             <div class="meal-card">
                 <img src="images/chicken stir fry.jpeg" alt="Chicken Stir-Fry">
                 <div class="meal-info">
                     <div class="meal-title">Chicken Stir-Fry with Brown Rice</div>
+                    <span>Calories:</span> <span id="calories">400</span><span>kcal | Protein: </span><span id="protein">30</span><span>g | Fat: </span><span id="fat">12</span><span>g</span>
+                    <input type="date" id="date27"> <button id="planMeal14">I Want To Eat This Meal</button>
+                    <br>
+                    <input type="date" id="date28"> <button id="ateMeal14">I Ate This Meal</button>
                 </div>
             </div>
         </div>
@@ -182,12 +234,20 @@
                 <img src="images/yogurt and fruit parfaits.jpeg" alt="Yogurt Parfait">
                 <div class="meal-info">
                     <div class="meal-title">Yogurt and Fruit Parfaits</div>
+                    <span>Calories:</span> <span id="calories">300</span><span>kcal | Protein: </span><span id="protein">15</span><span>g | Fat: </span><span id="fat">5</span><span>g</span>
+                    <input type="date" id="date1"> <button id="planMeal15">I Want To Eat This Meal</button>
+                    <br>
+                    <input type="date" id="date2"> <button id="ateMeal15">I Ate This Meal</button>
                 </div>
             </div>
             <div class="meal-card">
                 <img src="images/Loaded Avocado.jpeg" alt="Avocado Toast">
                 <div class="meal-info">
                     <div class="meal-title">Loaded Avocado Toast</div>
+                    <span>Calories:</span> <span id="calories">300</span><span>kcal | Protein: </span><span id="protein">8</span><span>g | Fat: </span><span id="fat">12</span><span>g</span>
+                    <input type="date" id="date3"> <button id="planMeal16">I Want To Eat This Meal</button>
+                    <br>
+                    <input type="date" id="date4"> <button id="ateMeal16">I Ate This Meal</button>
                 </div>
             </div>
         </div>
@@ -202,12 +262,20 @@
                 <img src="images/veggie q.jpeg" alt="Veggie Quesadillas">
                 <div class="meal-info">
                     <div class="meal-title">Veggie Quesadillas</div>
+                    <span>Calories:</span> <span id="calories">450</span><span>kcal | Protein: </span><span id="protein">18</span><span>g | Fat: </span><span id="fat">20</span><span>g</span>
+                    <input type="date" id="date5"> <button id="planMeal17">I Want To Eat This Meal</button>
+                    <br>
+                    <input type="date" id="date6"> <button id="ateMeal17">I Ate This Meal</button>
                 </div>
             </div>
             <div class="meal-card">
                 <img src="images/italian pasta salad.jpeg" alt="Italian Pasta Salad">
                 <div class="meal-info">
                     <div class="meal-title">Italian Pasta Salad</div>
+                    <span>Calories:</span> <span id="calories">350</span><span>kcal | Protein: </span><span id="protein">12</span><span>g | Fat: </span><span id="fat">18</span><span>g</span>
+                    <input type="date" id="date7"> <button id="planMeal18">I Want To Eat This Meal</button>
+                    <br>
+                    <input type="date" id="date8"> <button id="ateMeal18">I Ate This Meal</button>
                 </div>
             </div>
         </div>
@@ -222,12 +290,20 @@
                 <img src="images/slow cooker.jpeg" alt="Beef and Broccoli">
                 <div class="meal-info">
                     <div class="meal-title">Slow Cooker Beef and Broccoli</div>
+                    <span>Calories:</span> <span id="calories">450</span><span>kcal | Protein: </span><span id="protein">40</span><span>g | Fat: </span><span id="fat">25</span><span>g</span>
+                    <input type="date" id="date9"> <button id="planMeal19">I Want To Eat This Meal</button>
+                    <br>
+                    <input type="date" id="date10"> <button id="ateMeal19">I Ate This Meal</button>
                 </div>
             </div>
             <div class="meal-card">
                 <img src="images/one pot.jpeg" alt="One Pot Chicken and Rice">
                 <div class="meal-info">
                     <div class="meal-title">One-Pot Chicken and Rice</div>
+                    <span>Calories:</span> <span id="calories">350</span><span>kcal | Protein: </span><span id="protein">30</span><span>g | Fat: </span><span id="fat">10</span><span>g</span>
+                    <input type="date" id="date11"> <button id="planMeal20">I Want To Eat This Meal</button>
+                    <br>
+                    <input type="date" id="date12"> <button id="ateMeal20">I Ate This Meal</button>
                 </div>
             </div>
         </div>
